--- a/MyApplication/app/src/main/res/layout/activity_empleado.xml
+++ b/MyApplication/app/src/main/res/layout/activity_empleado.xml
@@ -7,6 +7,7 @@
     tools:context=".EmpleadoActivity">
 
     <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
